--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,39 @@
+body{
+    background: #E5E5E5;
+}
 .logo {
-position: absolute;
-top: 40px;
+    position: absolute;
+    left: 6px;
+    top: 40px;
+   
+}
+.caja-muñeco {
+    position: absolute;
+    width: 21%;
+    height: 944px;
+    right: 40px;
+    left: 1000px;
+    top: 40px;
+    background: #FFFFFF;
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
+    text-align: center;
+}
+.escribe{
+    position: absolute;
+    width: 577px;
+    height: 48px;
+    left: 240px;
+    top: 168px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%;
+}
+.muneco{
+    width: 92%;
+    position: relative;
+    top: 30%;
 }
