--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,73 @@
 body{
     background: #E5E5E5;
+
 }
-.logo {
+.logo{
     position: absolute;
-    left: 6px;
-    top: 40px;
+    top:5%;
 }
-.caja-muñeco {
+.caja-encriptador {
     position: absolute;
-    width: 21%;
-    height: 90%;
-    right: 40px;
-    top: 40px;
+    top: 5%;
+    right: 3%;
+    bottom: 5%;
+    width: 25%;
+    height: 80%;
     background: #FFFFFF;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
 }
-
-.muneco {
-    position: relative;
-    top: 30%;
-    width: 70%;
-    left: 16%;
+.caja-encriptador .texto-inicial{
+    position: absolute;
+    width: 50%;
+    margin-left: 25%;
+    top: 25%;
 }
-
-.ningun-mensaje{
-    position: relative;
+.caja-encriptador .caja-resultado{
+    display: none;
+}
+.caja-encriptador .muneco{
+    width: 100%;
+}
+.caja-encriptador .ningun-mensaje{
     text-align: center;
+    margin: 20px 0;
     font-size: 24px;
     top: 30%;
     opacity: 0.8;
 }
-.ingresa-texto {
-    position: relative;
+.caja-encriptador .ingresa-texto {
     text-align: center;
     font-weight: 336px;
     font-size: 16px;
     color: #495057;
     top: 32%;
 }
+
+.caja-resultado .mensaje-encriptado{
+        position: absolute;
+        width: 50%;
+        margin-left: 25%;
+        top: 25%;
+        text-align: center;
+        font-size: 24px;
+        line-height: 36px;
+        color: #495057;
+}
+.caja-resultado .boton-copiar {
+    position: absolute;
+    width: 50%;
+    height: 10%;
+    margin-left: 25%;
+    bottom: 5%;
+    background: #D8DFE8;
+    color: #0A3871;
+    border-width: 1px;
+    border-style: 1px;
+    border-radius: 20px;
+    border-color: #0A3871;
+}
+
 .input{
     position: absolute;
     width: 50%;
@@ -54,18 +83,41 @@ body{
     border: none;
     
 }
+
 .input::placeholder{
     color: #0A3871;
 }
+
 .botones{
     position: absolute;
-    bottom: 40px;
+    bottom: 15%;
     left: 100px;   
     
 }
+
 .botones button{
     display: inline;
-    margin: 0 0 0 80px;
+    margin: 0 0 0 70px;
+}
+.boton-encriptar {
+    background: #0A3871;
+    color: #E5E5E5;
+    width: 328px;
+    height: 67px;
+    border-width: 1px;
+    border-radius: 20px;
+}
+
+.boton-desencriptar {
+    background: #D8DFE8;
+    color: #0A3871;
+    width: 328px;
+    height: 67px;
+    margin-left: 0%;
+    border-width: 1px;
+    border-style: 1px;
+    border-radius: 20px;
+    border-color: #0A3871;
 }
 .vector-letras{
     position: absolute;
@@ -85,25 +137,16 @@ body{
     color: #495057;
     opacity: 0.8;
 }
-.boton-encriptar {
-
-    background: #0A3871;
-    color: #E5E5E5;
-    width: 328px;
-    height: 67px;
-    border-width: 1px;
-    border-radius: 20px;
+footer{
+    background-color: #0A3871;
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    bottom: 0px;
 }
-
-.boton-desencriptar {
-   
-    background: #D8DFE8;
-    color: #0A3871;
-    width: 328px;
-    height: 67px;
-    margin-left: 0%;
-    border-width: 1px;
-    border-style: 1px;
-    border-radius: 20px;
-    border-color: #0A3871;
+footer li{
+   display: inline-block;
+}
+footer a{
+    color: #FFFFFF;
 }
