--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,12 @@ body{
     border: none;
     
 }
-.input:focus{
-    border: none;
-}
+
+.input:focus {
+    outline: none !important;
+    border:0px solid white;
+    box-shadow: 0 0 10px #719ECE;
+  }
 .input::placeholder{
     color: #0A3871;
 }
